--- a/mimosamq-logging/pom.xml
+++ b/mimosamq-logging/pom.xml
@@ -9,16 +9,11 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>mimosamq-logger</artifactId>
+    <artifactId>mimosamq-logging</artifactId>
     <packaging>jar</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <properties>
+        <project.root>${basedir}/..</project.root>
+    </properties>
 
 </project>
