--- a/mimosamq-store/pom.xml
+++ b/mimosamq-store/pom.xml
@@ -7,12 +7,13 @@
         <groupId>com.mimosamq</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>mimosamq-distribution</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>mimosamq-store</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <project.root>${basedir}/..</project.root>
     </properties>
-
+    
 </project>
