--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,15 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <netty.version>4.1.65.Final</netty.version>
+        <!-- JNI 调用 -->
         <netty.tcnative.version>2.0.53.Final</netty.tcnative.version>
+        <!-- 用于CMS、PKCS、EAC、TSP、CMP、CRMF、OCSP和证书生成的Java api -->
         <bcpkix-jdk15on.version>1.69</bcpkix-jdk15on.version>
         <fastjson.version>1.2.83</fastjson.version>
         <gson.version>2.9.0</gson.version>
+        <!-- 字节码操作 -->
         <javassist.version>3.20.0-GA</javassist.version>
+        <!-- JNA（Java Native Access ）提供一组Java工具类用于在运行期间动态访问系统本地库（native library：如Window的dll）而不需要编写任何Native/JNI代码 -->
         <jna.version>4.2.2</jna.version>
         <commons-cli.version>1.5.0</commons-cli.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
@@ -51,6 +55,7 @@
         <snakeyaml.version>1.32</snakeyaml.version>
         <slf4j-api.version>2.0.3</slf4j-api.version>
         <jul-to-slf4j.version>2.0.6</jul-to-slf4j.version>
+        <!-- 压缩包 -->
         <zstd-jni.version>1.5.2-2</zstd-jni.version>
         <lz4-java.version>1.8.0</lz4-java.version>
         <dleger.version>0.3.1.2</dleger.version>
