--- a/mimosqmq-container/pom.xml
+++ b/mimosqmq-container/pom.xml
@@ -3,17 +3,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.mimosamq</groupId>
         <artifactId>mimosamq</artifactId>
+        <groupId>com.mimosamq</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>mimosamq-client</artifactId>
+    <artifactId>mimosamq-container</artifactId>
     <packaging>jar</packaging>
 
     <properties>
         <project.root>${basedir}/..</project.root>
     </properties>
-
 </project>
